feat(doc): add reference link (#1720)
* using pnpm 10+

* small sv tweaks

* v0

* v1

* cleanup

* fixing &#x3C;script> in tooltip to <script> (in code part)

* Disable highlight styles

* first things first

* { references }

* pretty

* update

* back to pnpm 9 ?

---------

Co-authored-by: Tee Ming <chewteeming01@gmail.com>
Co-authored-by: Rich Harris <rich.harris@vercel.com>

--- a/packages/site-kit/src/lib/styles/utils/twoslash.css
+++ b/packages/site-kit/src/lib/styles/utils/twoslash.css
@@ -36,3 +36,11 @@
 	width: 100%;
 	padding: 0 !important;
 }
+
+.twoslash-popup-reference {
+	margin-top: 1rem;
+	padding-top: 1rem;
+	border-top: 1px solid var(--sk-border);
+	color: var(--sk-fg-accent);
+	text-decoration: none;
+}
