--- a/apps/svelte.dev/static/tutorial/shared.css
+++ b/apps/svelte.dev/static/tutorial/shared.css
@@ -33,10 +33,11 @@ html {
 
 body {
 	--border-radius: 4px;
-	--font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-		'Open Sans', 'Helvetica Neue', sans-serif;
-	--font-mono: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono',
-		monospace;
+	--font:
+		-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+		'Helvetica Neue', sans-serif;
+	--font-mono:
+		ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace;
 	background: var(--bg-1);
 	color: var(--fg-1);
 	font-family: var(--font);
